[gd_scene load_steps=2 format=3 uid="uid://dialogue_ui_001"]

[ext_resource type="Script" path="res://scripts/dialogue_ui.gd" id="1"]

[node name="DialogueUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopBar" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AgentLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Chat with: Agent"
theme_override_font_sizes/font_size = 20

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "Close (ESC)"

[node name="ChatHistory" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="InputContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MessageInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type your message here..."

[node name="SendButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/InputContainer"]
layout_mode = 2
text = "Send"
